--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jb",
     "jb-grid",
     "table",
-    "web component",
+    "web component"
   ],
   "version": "0.0.1",
   "bugs": "https://github.com/javadbat/jb-button/issues",
