feat: Add rtl support

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "rootDir": "./lib",
+        "declaration": true,
         "declarationDir": "./dist"
     },
     "include": [
