--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web component",
     "react component"
   ],
-  "version": "0.0.4",
+  "version": "0.1.0",
   "bugs": "https://github.com/javadbat/jb-grid/issues",
   "license": "MIT",
   "files": [
@@ -30,6 +30,9 @@
 		"url": "git@github.com:javadbat/jb-grid.git"
   },
   "dependencies": {
-    "jb-core":">=0.16.1"
+    "jb-core":">=0.19.0",
+    "mobx":">=6.0.0",
+    "mobx-react":">=7.0.0",
+    "jb-searchbar":">=2.3.1"
   }
 }
